// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover when it renders should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <button
      aria-expanded="false"
      id="headlessui-popover-button-1"
      type="button"
    >
      Open me
    </button>
  </div>
</DocumentFragment>
`;

exports[`Popover when the popover is opened should open the popover content 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <button
      aria-controls="headlessui-popover-panel-4"
      aria-expanded="true"
      id="headlessui-popover-button-3"
      type="button"
    >
      Open me
    </button>
    <div
      class="absolute z-10 mt-2 transition ease-out duration-200 opacity-0 translate-y-1"
      id="headlessui-popover-panel-4"
    >
      <div
        class="w-full h-full bg-white rounded shadow-20"
      >
        <div>
          Content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
